# DocBridge

./: .gitignore  AGENTS.md  README.md  pyproject.toml  setup.cfg
docs/: architecture.md  editor-model-v0.md  ir_draft.md  ir_v1.md  product-scope.md  roadmap.md
hwp_samples/: 001_text_only.hwp  001_text_only.hwpx  002_paragraph_style.hwp  002_paragraph_style.hwpx  003_table_basic.hwp  003_table_basic.hwpx  004_image_basic.hwp  004_image_basic.hwpx  005_numbering.hwp  005_numbering.hwpx  006_header_footer.hwp  006_header_footer.hwpx  007_table_merge.hwp  007_table_merge.hwpx  008_mixed.hwp  008_mixed.hwpx
samples/: README.md
src/hwp_parser/: __init__.py  block_analysis.py  bodytext.py  cli.py  container.py  file_header.py  models.py  style_analysis.py
src/hwp_parser/docx_writer/: __init__.py  cli.py  image_resolver.py  (+2 more)
tests/: test_bodytext.py  test_docx_image_resolver.py  test_docx_writer.py  test_docx_writer_images.py  test_docx_writer_media.py  test_docx_writer_tables.py  test_editor_model.py  test_editor_model_docx_export.py  test_editor_model_roundtrip.py  test_header_footer_ir.py  test_image_ir.py  test_import_adapters.py  test_ir_conversion.py  test_ir_fixture_regeneration.py  test_mixed_ir.py  test_numbering_ir.py  test_ole_dump.py  test_paragraphs.py  test_style_analysis.py  test_table_ir.py  test_table_merge_ir.py
viewer/: index.html  package-lock.json  package.json  vite.config.ts
viewer/src/: App.test.tsx  App.tsx  autosave.ts  fixtures.ts  imageUpload.ts  importDocument.ts  irToEditorModel.ts  loadFixture.ts  styles.css  types.ts  uploadDocument.ts
(+31 files in other folders)
