[metadata]
name = hwp-parser
version = 0.1.0
description = Minimal foundation for dumping HWP OLE streams
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    olefile>=0.47

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    hwp-dump = hwp_parser.cli:main
